# openai-realtime-embedded-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mise.toml  platformio.ini  sdkconfig.defaults  sdkconfig.m5stack-atoms3r
components/peer/: CMakeLists.txt
src/: CMakeLists.txt  idf_component.yml  webrtc.cpp
